--- a/index.html
+++ b/index.html
@@ -16,8 +16,9 @@
     <div class="buySection">
         <h1>Buy your ticket today</h1>
         <h2>Price from 500€ to 1000€</h2>
-        <button id="buyButton">Buy ticket</button>
+        <button id="buyButton" class="productButton">Buy ticket</button>
     </div>
+   
 </body>
 
 </html>
